Opacity Logic modified for Gaming Case and improved logic
Changing background shouldn't change opacity.
Gaming Window cannot have an opacity value lower than 1, because the window does not allow TRANSPARENCY.

--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/GamingUseCase.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/GamingUseCase.xaml
@@ -22,7 +22,7 @@
         ResizeMode="CanMinimize"
         >
 
-    <Grid x:Name="myGrid">
+    <Grid x:Name="myGrid" Opacity="1">
         <TextBlock TextAlignment="Center" FontSize="24" Margin="180,10,180,290">
             <Bold>Applications</Bold>
         </TextBlock>
